[package]
name = "omen_micro"
version = "0.1.0"
edition = "2021"
description = "A rust crate for generating microservice boilerplate code"
license = "MIT"
authors = ["Mrinal mrinalbitsat@gmail.com"]
homepage = "https://github.com/mrinalxdev/omen"
repository = "https://github.com/mrinalxdev/omen"
keywords = [
    "compilers",
    "config"
]
categories = ["boilerplate"]


[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
askama = "0.11"
anyhow = "1.0"

[lib]
name = "omen"
path = "src/lib.rs"

[[bin]]
name = "omen"
path = "src/main.rs"
